bk_ida/gccida/g1/_cpp_lex_direct
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/_cpp_lex_direct/src/cpplex.c:1339:1: error: unknown type name 'cpp_token_0'; did you mean 'cpp_token'?
cpp_token_0 * cpp_lex_direct( cpp_reader_0 *pfile) 
^~~~~~~~~~~
cpp_token
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/_cpp_lex_direct/src/cpplib.h:40:26: note: 'cpp_token' declared here
typedef struct cpp_token cpp_token;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/_cpp_lex_direct/src/cpplex.c:1339:31: error: unknown type name 'cpp_reader_0'; did you mean 'cpp_reader'?
cpp_token_0 * cpp_lex_direct( cpp_reader_0 *pfile) 
                              ^~~~~~~~~~~~
                              cpp_reader
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/_cpp_lex_direct/src/cpplib.h:36:27: note: 'cpp_reader' declared here
typedef struct cpp_reader cpp_reader;
                          ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/_cpp_lex_direct/src/cpplex.c:1341:1: error: unknown type name 'cpp_token_0'; did you mean 'cpp_token'?
cpp_token_0 *cur_token; // r12 
^~~~~~~~~~~
cpp_token
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/_cpp_lex_direct/src/cpplib.h:40:26: note: 'cpp_token' declared here
typedef struct cpp_token cpp_token;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/_cpp_lex_direct/src/cpplex.c:1342:1: error: unknown type name 'cpp_buffer_0'; did you mean 'cpp_buffer'?
cpp_buffer_0 *buffer; // rbp 
^~~~~~~~~~~~
cpp_buffer
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/_cpp_lex_direct/src/cpplib.h:38:27: note: 'cpp_buffer' declared here
typedef struct cpp_buffer cpp_buffer;
                          ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/_cpp_lex_direct/src/cpplex.c:1346:1: error: unknown type name 'cpp_buffer_0'; did you mean 'cpp_buffer'?
cpp_buffer_0 *v6; // r14 
^~~~~~~~~~~~
cpp_buffer
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/_cpp_lex_direct/src/cpplib.h:38:27: note: 'cpp_buffer' declared here
typedef struct cpp_buffer cpp_buffer;
                          ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/_cpp_lex_direct/src/cpplex.c:1354:1: error: unknown type name 'cpp_buffer_0'; did you mean 'cpp_buffer'?
cpp_buffer_0 *v14; // r13 
^~~~~~~~~~~~
cpp_buffer
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/_cpp_lex_direct/src/cpplib.h:38:27: note: 'cpp_buffer' declared here
typedef struct cpp_buffer cpp_buffer;
                          ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/_cpp_lex_direct/src/cpplex.c:1375:1: error: unknown type name 'cpp_buffer_0'; did you mean 'cpp_buffer'?
cpp_buffer_0 *v35; // r14 
^~~~~~~~~~~~
cpp_buffer
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/_cpp_lex_direct/src/cpplib.h:38:27: note: 'cpp_buffer' declared here
typedef struct cpp_buffer cpp_buffer;
                          ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/_cpp_lex_direct/src/cpplex.c:1377:1: error: unknown type name 'cpp_buffer_0'; did you mean 'cpp_buffer'?
cpp_buffer_0 *v37; // r15 
^~~~~~~~~~~~
cpp_buffer
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/_cpp_lex_direct/src/cpplib.h:38:27: note: 'cpp_buffer' declared here
typedef struct cpp_buffer cpp_buffer;
                          ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/_cpp_lex_direct/src/cpplex.c:1454:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[*v8] & 0x800) == 0 ) 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/_cpp_lex_direct/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/_cpp_lex_direct/src/cpplex.c:1663:13: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
else if ( ( sch_istable[( unsigned __int8)v49] & 4) != 0 ) 
            ^~~~~~~~~~~
            _sch_istable
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/_cpp_lex_direct/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/_cpp_lex_direct/src/cpplex.c:1666:38: error: expected expression
parse_number( pfile, ( cpp_string_0 *)&cur_token->val, v49, 1); 
                                     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/_cpp_lex_direct/src/cpplex.c:1666:24: error: use of undeclared identifier 'cpp_string_0'
parse_number( pfile, ( cpp_string_0 *)&cur_token->val, v49, 1); 
                       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/_cpp_lex_direct/src/cpplex.c:1717:13: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
else if ( ( sch_istable[( unsigned __int8)v39] & 0x400) != 0 ) 
            ^~~~~~~~~~~
            _sch_istable
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/_cpp_lex_direct/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/_cpp_lex_direct/src/cpplex.c:1758:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[( unsigned __int8)v41] & 0x400) != 0 ) 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/_cpp_lex_direct/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/_cpp_lex_direct/src/cpplex.c:1780:46: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
v43 = ( unsigned int)&pfile->buffer->cur[( ( sch_istable[*( ( unsigned __int8 *)pfile->buffer->cur - 1)] & 0x400) == 0) 
                                             ^~~~~~~~~~~
                                             _sch_istable
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/_cpp_lex_direct/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/_cpp_lex_direct/src/cpplex.c:1803:38: error: expected expression
parse_number( pfile, ( cpp_string_0 *)&cur_token->val, v5, 0); 
                                     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/_cpp_lex_direct/src/cpplex.c:1803:24: error: use of undeclared identifier 'cpp_string_0'
parse_number( pfile, ( cpp_string_0 *)&cur_token->val, v5, 0); 
                       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/_cpp_lex_direct/src/cpplex.c:2030:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[( unsigned __int8)v16] & 0x204) != 0 ) 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/_cpp_lex_direct/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/_cpp_lex_direct/src/cpplex.c:2035:11: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
while ( ( sch_istable[( unsigned __int8)v16] & 0x204) != 0 ); 
          ^~~~~~~~~~~
          _sch_istable
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/_cpp_lex_direct/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/_cpp_lex_direct/src/obj/cpplex.o] Error 1
